@@ -590,7 +590,8 @@ function AutoCategory.onLoad(event, addon)
     AutoCategory.checkLibraryVersions()
 
     -- load our saved variables
-    AC.acctSaved, AC.charSaved = SF.getAllSavedVars("AutoCategorySavedVars", 1.1, AC.defaultAcctSettings)
+    AC.acctSaved, AC.charSaved = SF.getAllSavedVars("AutoCategorySavedVars",
+		1.1, AC.defaultAcctSettings)
 
     -- init bag category table only when the bag is missing
     for k, v in pairs(AC.defaultAcctBagSettings.bags) do
